--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mark-six-lottery-numbers-generator-react",
   "version": "0.1.0",
+  "homepage": "https://kendicey.github.io/hw-mark-six.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -38,6 +39,5 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
-  },
-  "homepage": "https://kendicey.github.io/hw-mark-six.github.io/"
+  }
 }
